--- a/infra/website/painel_cliente.html
+++ b/infra/website/painel_cliente.html
@@ -137,6 +137,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/v/bs5/jszip-2.5.0/dt-1.13.4/af-2.5.3/b-2.3.6/b-colvis-2.3.6/b-html5-2.3.6/b-print-2.3.6/cr-1.6.2/date-1.4.0/fc-4.2.2/fh-3.3.2/kt-2.8.2/r-2.4.1/rg-1.3.1/rr-1.3.3/sc-2.1.1/sb-1.4.1/sp-2.1.2/sl-1.6.2/sr-1.2.2/datatables.min.js"></script>
+    <script type="text/javascript" src="js/dataTableTraducao.js"></script>
     <script type="text/javascript" src="js/painel_cliente.js"></script>
     <script type="text/javascript" src="js/componentes.js"></script>
 </body>
