Arrumei o bug do primeiro carregamento, adicionei form de solicitação de emprestimo

--- a/infra/website/pages/financeiro.html
+++ b/infra/website/pages/financeiro.html
@@ -1,5 +1,37 @@
 <div class="container pt-4">
-    <table id="emprestimos" class="display" style="width:100%">
-        
-    </table>
+    <div class="row">
+
+        <div class="col-md-6 pe-5 ps-5">
+            <div class="border pe-5 ps-5 pt-2">
+                <div class="text-center mb-3">
+                    <p><b>Solicitar Emprestimo</b></p>                    
+                </div>
+                <!-- Name input -->
+                <div class="form-outline mb-4">
+                    <input type="text" id="form4Example1" class="form-control border" />
+                    <label class="form-label" for="form4Example1">Valor</label>
+                </div>
+
+                <!-- Message input -->
+                <div class="form-outline mb-4">
+                    <textarea class="form-control border" id="form4Example3" rows="4"></textarea>
+                    <label class="form-label" for="form4Example3">Mensagem *Opcional*</label>
+                </div>
+                <!-- Checkbox -->
+                <div class="form-check d-flex justify-content-center mb-4">
+                    <input class="form-check-input me-2" type="checkbox" value="" id="form5Example3" checked />
+                    <label class="form-check-label" for="form5Example3">
+                        Eu li e concordo com os termos
+                    </label>
+                </div>
+                <!-- Submit button -->
+                <button type="submit" class="btn btn-primary btn-block mb-4">Enviar Solicitação</button>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <table id="emprestimos" class="display table " style="width:100%">
+
+            </table>
+        </div>
+    </div>
 </div>
