--- a/infra/website/painel_cliente.html
+++ b/infra/website/painel_cliente.html
@@ -85,7 +85,7 @@
                     <span class="nav_logo-name">Wtec Suprimentos</span>
                 </a>
                 <div class="nav_list">
-                    <a href="#dashboard" class="nav_link active">
+                    <a href="#dashboard" class="nav_link activeMenu">
                         <i class='bx bx-grid-alt nav_icon'></i>
                         <span class="nav_name">Dashboard</span>
                     </a>
