--- a/infra/website/index.html
+++ b/infra/website/index.html
@@ -326,6 +326,12 @@
         </div>
 
       </div>
+
+    <div class="d-flex justify-content-center justify-content-lg-center mt-5">
+      <a href="/login.html" class="btn btn-primary btn-block pt-2 pe-5 ps-5 pb-2" style="background-color: rgba(0, 131, 116, 0.8) !important;border-color: rgba(0, 131, 116, 0.8) !important;;">Clique aqui para se registrar</a>
+      
+    </div>
+
     </section><!-- End Frequently Asked Questions Section -->
 
        <!-- ======= Contact Section ======= -->
