Criei a tela de produtos

--- a/infra/website/pages/dashboard.html
+++ b/infra/website/pages/dashboard.html
@@ -7,11 +7,11 @@
                     <div class="d-flex justify-content-between p-md-1">
                         <div class="d-flex flex-row">
                             <div class="align-self-center">
-                                <h2 class="h1 mb-0 me-4">$76,456.00</h2>
+                                <h2 class="h1 mb-0 me-4">R$76,456.00</h2>
                             </div>
                             <div>
-                                <h4>Total Sales</h4>
-                                <p class="mb-0">Monthly Sales Amount</p>
+                                <h4>Total de vendas</h4>
+                                <p class="mb-0">Acumulado do mês</p>
                             </div>
                         </div>
                         <div class="align-self-center">
@@ -27,11 +27,11 @@
                     <div class="d-flex justify-content-between p-md-1">
                         <div class="d-flex flex-row">
                             <div class="align-self-center">
-                                <h2 class="h1 mb-0 me-4">$36,000.00</h2>
+                                <h2 class="h1 mb-0 me-4">R$36,000.00</h2>
                             </div>
                             <div>
-                                <h4>Total Cost</h4>
-                                <p class="mb-0">Monthly Cost</p>
+                                <h4>Custo Total</h4>
+                                <p class="mb-0">Acumulado do mês</p>
                             </div>
                         </div>
                         <div class="align-self-center">
@@ -47,7 +47,7 @@
     <section class="mb-4">
         <div class="card">
             <div class="card-header py-3">
-                <h5 class="mb-0 text-center"><strong>Sales</strong></h5>
+                <h5 class="mb-0 text-center"><strong>Vendas</strong></h5>
             </div>
             <div class="card-body">
                 <canvas class="my-4 w-100" id="myChart" height="380"></canvas>
@@ -61,7 +61,7 @@
         <div class="card">
             <div class="card-header text-center py-3">
                 <h5 class="mb-0 text-center">
-                    <strong>Sales Performance KPIs</strong>
+                    <strong>Performace de vendas</strong>
                 </h5>
             </div>
             <div class="card-body">
@@ -71,15 +71,15 @@
                             <tr>
                                 <th scope="col"></th>
                                 <th scope="col">Product Detail Views</th>
-                                <th scope="col">Unique Purchases</th>
-                                <th scope="col">Quantity</th>
-                                <th scope="col">Product Revenue</th>
-                                <th scope="col">Avg. Price</th>
+                                <th scope="col">Compras Unicas</th>
+                                <th scope="col">Quantidade</th>
+                                <th scope="col">Receita</th>
+                                <th scope="col">Média de preço</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">Value</th>
+                                <th scope="row">Valor</th>
                                 <td>18,492</td>
                                 <td>228</td>
                                 <td>350</td>
@@ -87,7 +87,7 @@
                                 <td>$13.68</td>
                             </tr>
                             <tr>
-                                <th scope="row">Percentage change</th>
+                                <th scope="row">Procentagem</th>
                                 <td>
                                     <span class="text-danger">
                                         <i class="fas fa-caret-down me-1"></i><span>-48.8%%</span>
@@ -115,7 +115,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th scope="row">Absolute change</th>
+                                <th scope="row">Mudança absoluta</th>
                                 <td>
                                     <span class="text-danger">
                                         <i class="fas fa-caret-down me-1"></i><span>-17,654</span>
