--- a/infra/website/painel_cliente.html
+++ b/infra/website/painel_cliente.html
@@ -93,6 +93,10 @@
                         <i class='bx bx-dollar nav_icon'></i>
                         <span class="nav_name">Financeiro</span>
                     </a>
+                    <a href="#produtos" class="nav_link">
+                        <i class='bx bx-cart nav_icon'></i>
+                        <span class="nav_name">Produtos</span>
+                    </a>
                     <!--
                     <a href="#" class="nav_link">
                         <i class='bx bx-message-square-detail nav_icon'></i>
@@ -123,6 +127,7 @@
     <main style="margin-top: 58px">
         <div id="dashboard" class="dashboard-page page_container" include-html="pages/dashboard.html" include-js="js/dashboard.js"></div>
         <div style="display:none" id="financeiro" class="dashboard-page page_container" include-html="pages/financeiro.html" include-js="js/financeiro.js"></div>
+        <div style="display:none" id="produtos" class="dashboard-page page_container" include-html="pages/produtos.html" include-js="js/produtos.js"></div>
     </main>
   
 
