--- a/infra/website/pages/financeiro.html
+++ b/infra/website/pages/financeiro.html
@@ -29,7 +29,7 @@
                 <div class="col-md-12 pe-5 ps-5 d-flex justify-content-center">
                     <div class="border pe-5 ps-5 pt-2 container-solicitar_emprestimo">
                         <div class="text-center mb-3">
-                            <p><b>Solicitar Emprestimo</b></p>
+                            <p><b>Solicitar Crédito</b></p>
                         </div>
                         <!-- Name input -->
                         <div class="form-outline mb-4">
