--- a/infra/website/painel_cliente.html
+++ b/infra/website/painel_cliente.html
@@ -117,7 +117,7 @@
                     -->
                 </div>
             </div>
-            <a href="#" class="nav_link">
+            <a href="/login.html" class="nav_link">
                 <i class='bx bx-log-out nav_icon'></i>
                 <span class="nav_name">Sair</span>
             </a>
