--- a/infra/website/pages/financeiro.html
+++ b/infra/website/pages/financeiro.html
@@ -33,24 +33,28 @@
                         </div>
                         <!-- Name input -->
                         <div class="form-outline mb-4">
-                            <input type="text" id="form4Example1" class="form-control border" />
-                            <label class="form-label" for="form4Example1">Valor</label>
+                            <input type="text" id="valor_credito" class="form-control border" />
+                            <label class="form-label" for="valor_credito">Valor</label>
                         </div>
 
                         <!-- Message input -->
                         <div class="form-outline mb-4">
-                            <textarea class="form-control border" id="form4Example3" rows="4"></textarea>
-                            <label class="form-label" for="form4Example3">Mensagem *Opcional*</label>
+                            <textarea class="form-control border" id="mensagem_credito" rows="4"></textarea>
+                            <label class="form-label" for="mensagem_credito">Mensagem *Opcional*</label>
                         </div>
                         <!-- Checkbox -->
                         <div class="form-check d-flex justify-content-center mb-4">
-                            <input class="form-check-input me-2" type="checkbox" value="" id="form5Example3" checked />
-                            <label class="form-check-label" for="form5Example3">
+                            <input class="form-check-input me-2" type="checkbox" value="" id="credito_concorda_termos" />
+                            <label class="form-check-label" for="credito_concorda_termos">
                                 Eu li e concordo com os termos
                             </label>
                         </div>
                         <!-- Submit button -->
-                        <button type="submit" class="btn btn-primary btn-block mb-4">Enviar Solicitação</button>
+                        <button type="submit" class="enviar_solicitacao_credito btn btn-primary btn-block mb-4">Enviar Solicitação</button>
+
+                        <div class="container-error mt-4 mb-4" style="display: none;">
+                            <div class="message-error"></div>
+                        </div>
                     </div>
                 </div>
             </div>
