Terminei a função de solicitar credito

--- a/infra/website/pages/financeiro.html
+++ b/infra/website/pages/financeiro.html
@@ -56,6 +56,41 @@
                             <div class="message-error"></div>
                         </div>
                     </div>
+
+                    <div class="border pe-5 ps-5 pt-2 container-solicitar_emprestimo_resumo">
+                        <div class="text-center mb-3">
+                            <p><b>Solicitar Crédito</b></p>
+                        </div>
+                        <!-- Name input -->
+                        <div class="mb-3 row">
+                            <label for="valor_credito_resumo" class="col-sm-2 col-form-label">Valor</label>
+                            <div class="col-sm-10">
+                                <input type="text" readonly class="form-control-plaintext" id="valor_credito_resumo" value="">
+                            </div>
+                        </div>                       
+                        <div class="mb-3 row">
+                            <label for="credito_status_resumo" class="col-sm-2 col-form-label">Status</label>
+                            <div class="col-sm-10">
+                                <input type="text" readonly class="form-control-plaintext" id="credito_status_resumo" value="">
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            <label for="mensagem_credito_resumo" class="col-sm-2 col-form-label">Mensagem</label>
+                            <textarea class="form-control border" id="mensagem_credito_resumo" rows="4" disabled readonly></textarea>
+                        </div>                        
+
+                        <!-- Checkbox -->
+                        <div class="form-check d-flex justify-content-center mb-4">
+                           <p></p>
+                        </div>
+                                      
+
+                        <div class="container-error mt-4 mb-4" style="display: none;">
+                            <div class="message-error"></div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
